Fix dialog's button alignment

--- a/templates/default/app.less
+++ b/templates/default/app.less
@@ -574,6 +574,7 @@ tr.commentOwner div.commentInfo span.commentEditBtn {
 		.ui-dialog-titlebar-close {display: none;}
 		box-shadow: none;
 		border: none;
+		.ui-button-text-only .ui-button-text {padding:0px 10px 0px 15px;}
 	}
 	.commentBoxArea {
 		border-radius: 10px;
